# mcp

./: README.md  pyproject.toml
src/brd_enhancer_mcp/: server.py
src/prompt_enhancer_mcp/: config.py  enhance_server.py  harness_client.py  pipeline_analyzer_server.py  server.py
