[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-enhancer-mcp"
version = "0.4.0"
description = "MCP servers for prompt enhancement, test workflows, and pipeline failure analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

# Three separate executables from one `pip install`
[project.scripts]
prompt-enhancer-mcp   = "prompt_enhancer_mcp.enhance_server:main"
test-workflow-mcp     = "prompt_enhancer_mcp.test_server:main"
pipeline-analyzer-mcp = "prompt_enhancer_mcp.pipeline_analyzer_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_enhancer_mcp"]
